# server/index.js
@@ -44,6 +44,7 @@ const gtfsdbRouter = require('./routes/gtfsdb.router');
 const cctvRouter = require('./routes/cctvs.router');
 const parkinLocRouter = require('./routes/parkingloc.router');
 const RouteFormatRouter = require('./routes/routeformat.router')
+const KmlToolRouter = require('./routes/kmltool.router')
 database.init();
 
 var fs = require('fs')
@@ -103,6 +104,7 @@ app.use('/gtfsdb',gtfsdbRouter);
 app.use('/api/v2/cctvs', cctvRouter)
 app.use('/api/v2/parkings', parkinLocRouter)
 app.use('/api/v2/routeformat', RouteFormatRouter)
+app.use('/api/v2/kmltool', KmlToolRouter)
 
 if (process.env.NODE_ENV === 'production') {
   console.log("process.env.NODE_ENV :" + process.env.NODE_ENV)
